--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -56,6 +56,7 @@
     <Compile Include="clsCustomer.cs" />
     <Compile Include="clsDataConnection.cs" />
     <Compile Include="clsOrder.cs" />
+    <Compile Include="clsProduct.cs" />
     <Compile Include="clsStaff.cs" />
     <Compile Include="clsSupply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
