--- a/Testing5/TestingSupply.csproj
+++ b/Testing5/TestingSupply.csproj
@@ -68,6 +68,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=5.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.5.0.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
@@ -133,7 +134,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Class" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAttribute.cs" />
     <Compile Include="tstSupply.cs" />
   </ItemGroup>
   <ItemGroup>
