bug fixes; edit and cancel button. (dateTime adjusted)

--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -134,6 +134,7 @@
     <Compile Include="clsOrder.cs" />
     <Compile Include="clsProduct.cs" />
     <Compile Include="clsStaff.cs" />
+    <Compile Include="clsStaffCollection.cs" />
     <Compile Include="clsSupply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
