--- a/Testing3/TestingStaff.csproj
+++ b/Testing3/TestingStaff.csproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tstStaffCollection.cs" />
     <Compile Include="tstStaff.cs" />
   </ItemGroup>
   <ItemGroup>
