--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -128,13 +128,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsCustomer.cs" />
-    <Compile Include="clsCustomerCollection.cs" />
     <Compile Include="clsDataConnection.cs" />
-    <Compile Include="clsOrder.cs" />
-    <Compile Include="clsProduct.cs" />
-    <Compile Include="clsStaff.cs" />
     <Compile Include="clsSupply.cs" />
+    <Compile Include="clsSupplyCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
